--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,24 +1,28 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-     name: azure-disk
-     namespace: trapp-demo
-provisioner: kubernetes.io/azure-disk
-parameters:
-  storageaccounttype: Standard_LRS
-  kind: Managed
----
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mssql-pv-volume
+  namespace: trapp-demo
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/mnt/data"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
   name: mssql-data
   namespace: trapp-demo
-  annotations:
-    volume.beta.kubernetes.io/storage-class: azure-disk
 spec:
+  storageClassName: manual
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 8Gi
-
